tests/integration/fail/equating_fns_lhs.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::EqError'
let f = fun x => x in
f == 1